# investment-advisor-gpt

./: .gitignore  Dockerfile  Dockerfile.ui  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.chainlit/: .langchain.db  config.toml
db/91031cd4-cd21-4125-9e2c-44527232ba68/: index_metadata.pickle
src/: api.py  app.py
src/fastapi/: api.py
src/model/: chains.py  main.py  prompts.py  tools.py
src/model/agents/: controller.py  parser.py
src/model/configs/examples/: agent_singaporean_male.json
src/model/prompts/: chains.py  tools.py  utils.py
src/model/templates/: chains.py  tools.py
