[tool.poetry]
name = "financial-advisor-gpt"
version = "0.1.0"
description = ""
authors = ["wtlow003 <wtlow003@suss.edu.sg>"]
readme = "README.md"
packages = [{include = "financial_advisor_gpt"}]

[tool.poetry.dependencies]
python = "^3.11.4"
langchain = "^0.0.271"
openai = "^0.27.9"
pypdf = "^3.15.2"
termcolor = "^2.3.0"
black = "^23.7.0"
py-dotenv = "^0.1"
chromadb = "^0.4.7"
unstructured = "^0.10.5"
python-magic-bin = "^0.4.14"
google-search-results = "^2.4.2"
chainlit = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
